Disconnect from geoclue when not using
Once gnome-settings-daemon uses geoclue (currently for automatic timezone), geoclue has no way of knowing that gsd doesn't need it anymore since the D-Bus connection used for communicated with geoclue is kept around. This means geoclue process keeps on running needlessly for the entire user session (which could be months).
Either gsd needs to use a separate D-Bus connection to talk to Geoclue or make use of the new API to destroy the client object when it's not needed any more, once I've implemented that: https://gitlab.freedesktop.org/geoclue/geoclue/issues/99.