dbus,manager: Add DeleteClient() method

Add a method for apps to explicitly delete their client objects. This is
useful for long-running applications (e.g gnome-settings-daemon) for
freeing their associated resources while they are not using Geoclue. This
will also allow geoclue to exit when it's not actually being used by these
applications.

Relevant: https://gitlab.gnome.org/GNOME/gnome-settings-daemon/issues/127

Fixes #99.